Add controllers folder. Update app

--- a/src/views/realTimeProducts.handlebars
+++ b/src/views/realTimeProducts.handlebars
@@ -1,4 +1,4 @@
-<div>
+<div class="formData">
     <form action="/api/products/realtimeproducts" method="post">
         Title: <input type="text" name="title" id="title"><br />
         Description: <input type="text" name="description" id="description"><br />
