--- a/src/views/realTimeProducts.handlebars
+++ b/src/views/realTimeProducts.handlebars
@@ -1,28 +1,51 @@
+<label style="font-size:20px;font-weight:bold;" for="">New product</label>
 <div class="formData">
     <form action="/api/products/realtimeproducts" method="post">
-        Title: <input type="text" name="title" id="title"><br />
-        Description: <input type="text" name="description" id="description"><br />
-        Price: <input type="text" name="price" id="price"> <br />
-        Category: <input type="text" name="category" id="category"><br />
-        Code: <input type="text" name="code" id="code"><br />
-        Stock: <input type="text" name="stock" id="stock"><br />
+        <div class="formItem">
+            <label for="title">Title:</label>
+            <input type="text" name="title" id="title"><br />
+        </div>
+        <div class="formItem">
+            <label for="title">Description:</label>
+            <input type="text" name="description" id="description"><br />
+        </div>
+        <div class="formItem">
+            <label for="title">Price:</label>
+            <input type="text" name="price" id="price"> <br />
+        </div>
+        <div class="formItem">
+            <label for="title">Category:</label>
+            <input type="text" name="category" id="category"><br />
+        </div>
+        <div class="formItem">
+            <label for="title">Code:</label>
+            <input type="text" name="code" id="code"><br />
+        </div>
+        <div class="formItem">
+            <label for="title">Stock:</label>
+            <input type="text" name="stock" id="stock"><br />
+        </div>
         <input type="submit" id="newProduct" value="Add new product">
     </form>
 </div>
 <br>
-<div>
-    Delete id: <input type="text" id="idProduct">
-    <input type="submit" id="deleteProduct" value="Delete this product">
+<label style="font-size:20px;font-weight:bold;" for="">Delete by Id</label>
+<div class="deleteById">
+    <form action="/api/products/realtimeproducts" method="delete">
+        Id: <input type="text" id="idProduct">
+        <input type="submit" id="deleteProduct" value="Delete this product">
+    </form>
 </div>
-<div id="showProducts">
-    <h1>Product List</h1>
+<hr>
+<h1>Product List</h1>
+<div class="showProducts">
     {{#each productList}}
-        <div>        
+        <div class="eachProduct">        
             <h3>{{ this.title }}</h3>
-            <p>Description: {{ this.description }}
-            Price: {{ this.price }}
-            Category: {{ this.category }}
-            Stock: {{ this.stock }}</p>
+            <p>Description: {{ this.description }}</p>
+            <p>Price: {{ this.price }}</p>
+            <p>Category: {{ this.category }}</p>
+            <p>Stock: {{ this.stock }}</p>
         </div>
     {{/each}}
 </div>
