--- a/public/styles/styles.scss
+++ b/public/styles/styles.scss
@@ -1,3 +1,14 @@
+.menubar{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    padding-left: 15px;
+    margin-right: 50%;
+    height: 40px;
+    width: 100%;
+    font-size: 18px;
+}
+
 .formData{
     border: 1px solid black;
     padding: 15px;
@@ -5,6 +16,7 @@
     font-size: 16px;
     display: flex;
     flex-direction: column;
+    margin-left: 40%;
 }
 
 .formItem{
