--- a/src/views/realTimeProducts.handlebars
+++ b/src/views/realTimeProducts.handlebars
@@ -1,4 +1,55 @@
 <h1>Product List</h1>
+<h3>Bienvenido, {{greetingName}}</h3>
+<div class="menubar">
+    {{#unless admin}}
+        <form action="/api/carts/" method="post">
+            <button>Create new cart</button>
+        </form>
+        <a href="/api/carts/64150d8d0b859a25e0d24160">See my cart</a>
+    {{/unless}}
+    <a href="/sessions/logout">Logout</a>
+</div>
+{{#if admin}}
+    <label style="font-size:20px;font-weight:bold;" for="">New product</label>
+    <div class="formData">
+        <form action="/api/products" method="post">
+            <div class="formItem">
+                <label for="title">Title:</label>
+                <input type="text" name="title" id="title"><br />
+            </div>
+            <div class="formItem">
+                <label for="title">Description:</label>
+                <input type="text" name="description" id="description"><br />
+            </div>
+            <div class="formItem">
+                <label for="title">Price:</label>
+                <input type="text" name="price" id="price"> <br />
+            </div>
+            <div class="formItem">
+                <label for="title">Category:</label>
+                <input type="text" name="category" id="category"><br />
+            </div>
+            <div class="formItem">
+                <label for="title">Code:</label>
+                <input type="text" name="code" id="code"><br />
+            </div>
+            <div class="formItem">
+                <label for="title">Stock:</label>
+                <input type="text" name="stock" id="stock"><br />
+            </div>
+            <input type="submit" id="newProduct" value="Add new product">
+        </form>
+    </div>
+    <br>
+    <label style="font-size:20px;font-weight:bold;" for="">Delete by Id</label>
+    <div class="deleteById">
+        <form action="/api/products/realtimeproducts" method="delete">
+            Id: <input type="text" id="idProduct">
+            <input type="submit" id="deleteProduct" value="Delete this product">
+        </form>
+    </div>
+{{/if}}
+<hr>
 <div class="showProducts">
     {{#each docs}}
         <div class="eachProduct">        
@@ -7,7 +58,7 @@
             <p>Price: {{ this.price }}</p>
             <p>Category: {{ this.category }}</p>
             <p>Stock: {{ this.stock }}</p>
-            <form action="/api/carts/641899bb4295790617f4db49/products/{{this._id}}" method="post">
+            <form action="/api/carts/64150d8d0b859a25e0d24160/products/{{this._id}}" method="post">
                 {{!-- <label for="qty">Quantity: </label>
                 <input type="text" id="qty"> --}}
                 <button id="addToCart">Add to cart</button>
@@ -23,45 +74,6 @@
     {{#if hasNextPage }}
         <a href="{{nextLink}}">Siguiente</a>
     {{/if}}
-</div>
-<hr>
-<label style="font-size:20px;font-weight:bold;" for="">New product</label>
-<div class="formData">
-    <form action="/api/products" method="post">
-        <div class="formItem">
-            <label for="title">Title:</label>
-            <input type="text" name="title" id="title"><br />
-        </div>
-        <div class="formItem">
-            <label for="title">Description:</label>
-            <input type="text" name="description" id="description"><br />
-        </div>
-        <div class="formItem">
-            <label for="title">Price:</label>
-            <input type="text" name="price" id="price"> <br />
-        </div>
-        <div class="formItem">
-            <label for="title">Category:</label>
-            <input type="text" name="category" id="category"><br />
-        </div>
-        <div class="formItem">
-            <label for="title">Code:</label>
-            <input type="text" name="code" id="code"><br />
-        </div>
-        <div class="formItem">
-            <label for="title">Stock:</label>
-            <input type="text" name="stock" id="stock"><br />
-        </div>
-        <input type="submit" id="newProduct" value="Add new product">
-    </form>
-</div>
-<br>
-<label style="font-size:20px;font-weight:bold;" for="">Delete by Id</label>
-<div class="deleteById">
-    <form action="/api/products/realtimeproducts" method="delete">
-        Id: <input type="text" id="idProduct">
-        <input type="submit" id="deleteProduct" value="Delete this product">
-    </form>
 </div>
 <script src="/socket.io/socket.io.js"></script>
 <script src="/js/client.js"></script>
