Add passport to login

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -70,4 +70,18 @@ h1 {
 .cartInfo td {
   width: 150px;
   text-align: center;
+}
+
+.formLogin {
+  text-align: center;
+  width: 350px;
+  margin-left: 40%;
+}
+
+.loginButtons {
+  display: flex;
+  flex-direction: row;
+  width: 200px;
+  justify-content: space-between;
+  margin: 15px 20%;
 }/*# sourceMappingURL=styles.css.map */
