--- a/src/views/errors/base.handlebars
+++ b/src/views/errors/base.handlebars
@@ -1,9 +1,11 @@
-<div style="text-align: center;">
+<div class="message">
     Error: {{error}}
-    <form action="register">
-        <button>Register</button>
-    </form>
-    <form action="login">
-        <button>Login</button>
-    </form>
+    <div class="buttons">
+        <form action="register">
+            <button>Register</button>
+        </form>
+        <form action="/sessions/login">
+            <button>Login</button>
+        </form>
+    </div>
 </div>
