--- a/src/views/chat.handlebars
+++ b/src/views/chat.handlebars
@@ -3,6 +3,9 @@
     <label id="username">:</label><input id="chatbox" type="text">
 </div>
 <div id="messageLogs"></div>
+<form action="/api/products">
+    <button>Back</button>
+</form>
 
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script src='/socket.io/socket.io.js'></script>
