--- a/src/views/realTimeProducts.handlebars
+++ b/src/views/realTimeProducts.handlebars
@@ -8,6 +8,7 @@
             <button>Create new cart</button>
         </form>
         <a href="/api/carts/{{results.cartId}}">See my cart</a>
+        <a href="/chat">Chat</a>
     {{/unless}}
     <a href="/sessions/logout">Logout</a>
 </div>
