--- a/public/styles/styles.scss
+++ b/public/styles/styles.scss
@@ -12,11 +12,12 @@
 .formData{
     border: 1px solid black;
     padding: 15px;
-    width: 350px;
+    width: 25%;
     font-size: 16px;
     display: flex;
     flex-direction: column;
-    //margin-left: 25px;
+    margin-left: 37.5%;
+    margin-top: 30px;
 }
 
 .formItem{
@@ -122,7 +123,18 @@ h1{
 }
 
 .message{
-    position: absolute;
-    left: 25%;
-    top: 15%;
+    width: 800px;
+    margin-left: 40px;
+    margin-top: 30px;
+}
+
+.buttonsErrorPage{
+    display: flex;
+    flex-direction: row;
+    width: 50%;
+    justify-content: space-around;
+}
+
+.productInfo{
+    margin: 30px 35px;
 }
