Add Reset pass and Premium user

--- a/src/views/cart.handlebars
+++ b/src/views/cart.handlebars
@@ -19,6 +19,7 @@
                 </tr>
             {{/each}}
         </table>
+        <h4>{{message}}</h4>
         <div style="margin:25px;">
             <a href="/api/products">Continue shopping</a>
         </div>
