--- a/src/views/chat.handlebars
+++ b/src/views/chat.handlebars
@@ -7,6 +7,7 @@
     <button>Back</button>
 </form>
 
-<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-<script src='/socket.io/socket.io.js'></script>
+<script src="/socket.io/socket.io.js"></script>
+<script src="https://cdn.socket.io/4.6.0/socket.io.min.js"></script>
 <script type="module" src="/js/chat.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
