--- a/src/views/chat.handlebars
+++ b/src/views/chat.handlebars
@@ -3,7 +3,7 @@
     <label id="username">:</label><input id="chatbox" type="text">
 </div>
 <div id="messageLogs"></div>
-<form action="/api/products">
+<form action="http://localhost:8080/api/products">
     <button>Back</button>
 </form>
 
