--- a/src/views/realTimeProducts.handlebars
+++ b/src/views/realTimeProducts.handlebars
@@ -8,7 +8,7 @@
             <button>Create new cart</button>
         </form>
         <a href="/api/carts/{{results.cartId}}">See my cart</a>
-        <a href="/chat">Chat</a>
+        <a href="http://localhost:3000/chat">Chat</a>
     {{/unless}}
     {{#if results.admin}}
         <a href="/users">Users</a>
