Corrected issue on purchase

--- a/src/views/payments.handlebars
+++ b/src/views/payments.handlebars
@@ -2,4 +2,4 @@
     <h1>{{status}}</h1>
     <p>{{message}}</p>
 </div>
-<a href="http://localhost:8080/api/products">Volver al sitio</a>
+<a href="/api/products">Volver al sitio</a>
